--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,14 @@
 name: Hprofile Actions
-on: workfloe_dispatch
+on: workflow_dispatch
 jobs:
   Testing:
     runs-on: ubuntu-latest
     steps:
-      name: testing workflow
-      run: echo "workflow workes"
+      - name: Code checkout
+        uses: actions/checkout@v4
+
+      - name: Maven test
+        run: mvn test
+
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
