--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ jobs:
   Testing:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Code checkout
         uses: actions/checkout@v4
 
-      - name: maven test
-        uses: mvn text
-        
-      - name: checkstyle test
-        uses: mvn checkstyle:checkstyle
+      - name: Maven test
+        run: mvn test
+
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
 
 
 
